@@ -28,6 +28,15 @@ $config->default_lang = 'en-utf-8';
 $config->force_lang = '';
 
 $config->do_not_set_lang_by_domain=true;
+    
+/* ------------------------------------------------------------*/
+/* Default timezone                                            */
+/* ------------------------------------------------------------*/
+
+/** List of supported timezones:
+ *  http://www.php.net/manual/en/timezones.php
+ */ 
+$config->timezone = null;
 
 /* ------------------------------------------------------------*/
 /* serweb appearance                                           */
